correct align

--- a/src/main/react-app/src/styles/common-styles.scss
+++ b/src/main/react-app/src/styles/common-styles.scss
@@ -13,15 +13,6 @@ h1 {
   font-weight: normal;
 }
 
-//TODO: to header.jss
-a.app-bar-link {
-  color: #fff;
-  text-decoration: none;
-  &hover {
-    color: #fff !important;
-  }
-}
-
 .clothes-list {
   margin: $averageMargin;
 }
